# offline-companion-core

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: acceptance_logic.yml  evaluation.yml  security_checks.yml  static_checks.yml  unit_tests.yml
configs/: triggers.yaml
configs/knowledge/: default.yaml  sources.yaml
configs/memory/: embedding.yaml
configs/personas/: default.yaml
docs/: ARCHITECTURE_v2.0_en.md  ARCHITECTURE_v2.0_zh.md  ARCHITECTURE_v2.1_zh.md  ARCHITECTURE_v2.3_en.md  ARCHITECTURE_v2.3_zh.md  ARCHITECTURE_v2.4_zh.md  CHANGELOG.md  PLUGIN_DEV_GUIDE_v1.0_en.md  PLUGIN_DEV_GUIDE_v1.0_zh.md  PROJECT_STATUS.md  README.md  SKILL_DEV_GUIDE_v1.0_en.md  SKILL_DEV_GUIDE_v1.0_zh.md  USER_MANUAL_v1.0_en.md  USER_MANUAL_v1.0_zh.md  _TEMP_NEXT_STEPS_2026-06-12.md  architecture-and-roadmap-v1.0.md  architecture-charter-v1.md  architecture_v1.0.md  docker.md  inference-cuda.md  knowledge-ops.md  memory-embedding.md  packaging.md  roadmap.md  sprint-3-plan.md  sprint-4-plan.md  sprint-5-plan.md  sprint-6-plan.md  tech-stack-v1.0.md
fixtures/: regression_dialogues.yaml
models/: registry.yaml
personas/: DEPRECATED.md
schemas/: skill-manifest-v1.json
scripts/: build_portable.py  full_acceptance.py  gpu_acceptance.py  ingest_knowledge.py  packaged_smoke.py  stress_test.py
tests/: conftest.py  test_auto_router.py  test_check_imports.py  test_ci_checks.py  test_cloud_connector.py  test_cloud_turn.py  test_core.py  test_desktop_bridge.py  test_desktop_http.py  test_desktop_instance_ipc.py  test_export_import_compat.py  test_fixture_inventory.py  test_idle_think_listener.py  test_knowledge_isolation.py  test_knowledge_search.py  test_memory_drafts.py  test_memory_embedding.py  test_memory_recall.py  test_message_router.py  test_model_registry.py  test_orchestrator_turn.py  test_packaged_smoke.py  test_plan_auto_bridge.py  test_plan_orchestrator.py  test_portable_runtime.py  test_regression_fixtures.py  test_rule_reformatter.py  test_runtime_sandbox.py  test_safety_yaml.py  test_skill_invoker.py  test_skill_manager.py  test_sqlite_thread.py  test_state_manager.py  test_triggers.py  test_web_server.py
tools/: check_imports.py
(+98 files in other folders)
