[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-companion-core"
version = "0.1.0"
description = "Privacy-first local companion agent core (Windows-first, GGUF, SQLite)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [{ name = "Liujiarong" }]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
inference = [
  "llama-cpp-python>=0.2.90",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[project.scripts]
companion = "offline_companion.shell.ui_host.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["offline_companion*", "companion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
