[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-companion-core"
version = "0.1.0"
description = "Privacy-first local companion agent core (Windows-first, GGUF, SQLite)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
authors = [{ name = "Liujiarong" }]
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
skill = [
  "packaging>=24.0",
  "jsonschema>=4.20",
]
inference = [
  "llama-cpp-python>=0.2.90",
]
cloud = [
  "httpx>=0.27",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "httpx>=0.27",
  "packaging>=24.0",
  "jsonschema>=4.20",
]
packaging = [
  "pyinstaller>=6.0",
]
webui = [
  "flask>=3.0",
]
desktop = [
  "pywebview>=5.0",
  "pystray>=0.19",
  "pillow>=10.0",
  "flask>=3.0",
]

[project.scripts]
companion = "offline_companion.shell.ui_host.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["offline_companion*", "companion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "security: security-related tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

